--- a/Curses/DeepMagic/Deep.csproj
+++ b/Curses/DeepMagic/Deep.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Cancellable.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="ConsoleCursor.cs" />
+    <Compile Include="ConsoleStatic.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Magic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
