--- a/Curses/DeepMagic/Deep.csproj
+++ b/Curses/DeepMagic/Deep.csproj
@@ -21,6 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NoWarn>IDE0002</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,8 +44,10 @@
   <ItemGroup>
     <Compile Include="Cancellable.cs" />
     <Compile Include="Console.cs" />
-    <Compile Include="Console.Cursor.cs" />
+    <Compile Include="ConsoleCursor.cs" />
     <Compile Include="Console.Static.cs" />
+    <Compile Include="ConsoleKey.cs" />
+    <Compile Include="ConsoleKey.Static.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Magic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
