--- a/Curses/DeepMagic/DeepMagic.csproj
+++ b/Curses/DeepMagic/DeepMagic.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cancellable.cs" />
-    <Compile Include="Color.cs" />
+    <Compile Include="Console\Color.cs" />
     <Compile Include="Console\Console.cs" />
     <Compile Include="Console\ConsoleDelta.cs" />
     <Compile Include="Console\ConsoleCursor.cs" />
@@ -51,12 +51,15 @@
     <Compile Include="Console\ConsoleKey.Static.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="ILevelGenerator.cs" />
-    <Compile Include="LevelGeneratorParameters.cs" />
+    <Compile Include="Level\ILevel.cs" />
+    <Compile Include="Level\ILevelGenerator.cs" />
+    <Compile Include="Level\ILevelGeneratorParameters.cs" />
+    <Compile Include="Level\ITile.cs" />
+    <Compile Include="Level\LevelGeneratorParameters.cs" />
+    <Compile Include="Level\Tile.cs" />
     <Compile Include="Magic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random.cs" />
-    <Compile Include="RogueLevel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
