--- a/Curses/DeepMagicImplementations/DeepMagicImplementations.csproj
+++ b/Curses/DeepMagicImplementations/DeepMagicImplementations.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RogueLevel.cs" />
     <Compile Include="RogueLevelGenerator.cs" />
+    <Compile Include="RogueLevelRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DeepMagic\DeepMagic.csproj">
