--- a/Curses/DeepMagic/DeepMagic.csproj
+++ b/Curses/DeepMagic/DeepMagic.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Console\ConsoleCursor.cs" />
     <Compile Include="Console\ConsoleKey.cs" />
     <Compile Include="Console\ConsoleKey.Static.cs" />
+    <Compile Include="Bindings\Constants.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Level\ILevelRenderer.cs" />
@@ -58,9 +59,12 @@
     <Compile Include="Level\ITile.cs" />
     <Compile Include="Level\LevelGeneratorParameters.cs" />
     <Compile Include="Level\Tile.cs" />
-    <Compile Include="Magic.cs" />
+    <Compile Include="Bindings\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DmRandom.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="notes.mkd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
