Level renderer made game renderer, move things, don't shuffle unnecessarily, coordinate in tile and character, use type instead of just tags

--- a/Curses/DeepMagic/DeepMagic.csproj
+++ b/Curses/DeepMagic/DeepMagic.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cancellable.cs" />
+    <Compile Include="Character.cs" />
     <Compile Include="Console\Color.cs" />
     <Compile Include="Console\DmConsole.cs" />
     <Compile Include="Console\ConsoleDelta.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Bindings\Constants.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="IBrain.cs" />
     <Compile Include="Level\ILevelRenderer.cs" />
     <Compile Include="Level\ILevel.cs" />
     <Compile Include="Level\ILevelGenerator.cs" />
