--- a/Curses/DeepMagic/DeepMagic.csproj
+++ b/Curses/DeepMagic/DeepMagic.csproj
@@ -42,21 +42,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cancellable.cs" />
-    <Compile Include="Character.cs" />
-    <Compile Include="CharacterAction.cs" />
+    <Compile Include="Character\Character.cs" />
+    <Compile Include="Input\Actions\CharacterAction.cs" />
+    <Compile Include="Input\Actions\CharacterActionParameterSet.cs" />
+    <Compile Include="Input\Actions\MovementAction.cs" />
     <Compile Include="Console\Color.cs" />
     <Compile Include="Console\DmConsole.cs" />
     <Compile Include="Console\ConsoleCursor.cs" />
     <Compile Include="Console\ConsoleKey.cs" />
     <Compile Include="Console\ConsoleKey.Static.cs" />
     <Compile Include="Bindings\Constants.cs" />
-    <Compile Include="Coordinate.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="GameInputMap.cs" />
-    <Compile Include="IBrain.cs" />
-    <Compile Include="InputHandler.cs" />
+    <Compile Include="Core\Coordinate.cs" />
+    <Compile Include="Utilities\Extensions.cs" />
+    <Compile Include="Core\Game.cs" />
+    <Compile Include="Input\GameInputMap.cs" />
+    <Compile Include="Character\IBrain.cs" />
+    <Compile Include="Input\InputHandler.cs" />
     <Compile Include="Level\ILevelRenderer.cs" />
     <Compile Include="Level\ILevel.cs" />
     <Compile Include="Level\ILevelGenerator.cs" />
@@ -66,7 +67,7 @@
     <Compile Include="Level\Tile.cs" />
     <Compile Include="Bindings\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DmRandom.cs" />
+    <Compile Include="Utilities\DmRandom.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="notes.mkd" />
