--- a/Curses/DeepMagic/DeepMagic.csproj
+++ b/Curses/DeepMagic/DeepMagic.csproj
@@ -44,9 +44,13 @@
   <ItemGroup>
     <Compile Include="Character\Character.cs" />
     <Compile Include="Core\GameManager.cs" />
+    <Compile Include="Events\ChangedLevelArgs.cs" />
     <Compile Include="Events\SomethingMovedArgs.cs" />
-    <Compile Include="Input\Actions\CharacterAction.cs" />
+    <Compile Include="Input\Actions\DevAction.cs" />
+    <Compile Include="Input\Actions\ICharacterAction.cs" />
     <Compile Include="Input\Actions\CharacterActionParameterSet.cs" />
+    <Compile Include="Input\Actions\IInputAction.cs" />
+    <Compile Include="Input\Actions\InputAction.cs" />
     <Compile Include="Input\Actions\MovementAction.cs" />
     <Compile Include="Console\Color.cs" />
     <Compile Include="Console\DmConsole.cs" />
@@ -55,6 +59,7 @@
     <Compile Include="Console\ConsoleKey.Static.cs" />
     <Compile Include="Bindings\Constants.cs" />
     <Compile Include="Core\Coordinate.cs" />
+    <Compile Include="Input\Actions\QuitAction.cs" />
     <Compile Include="Utilities\Extensions.cs" />
     <Compile Include="Core\Game.cs" />
     <Compile Include="Input\GameInputMap.cs" />
