--- a/Curses/DeepMagic/DeepMagic.csproj
+++ b/Curses/DeepMagic/DeepMagic.csproj
@@ -42,7 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Character\Character.cs" />
+    <Compile Include="Input\Character\AttributeCollection.cs" />
+    <Compile Include="Input\Character\Character.cs" />
+    <Compile Include="Input\Actions\Item.cs" />
+    <Compile Include="Input\Character\PaperDoll.cs" />
     <Compile Include="Core\GameManager.cs" />
     <Compile Include="Events\ChangedLevelArgs.cs" />
     <Compile Include="Events\SomethingMovedArgs.cs" />
@@ -63,15 +66,15 @@
     <Compile Include="Utilities\Extensions.cs" />
     <Compile Include="Core\Game.cs" />
     <Compile Include="Input\GameInputMap.cs" />
-    <Compile Include="Character\IBrain.cs" />
+    <Compile Include="Input\Character\IBrain.cs" />
     <Compile Include="Input\InputHandler.cs" />
-    <Compile Include="Level\ILevelRenderer.cs" />
-    <Compile Include="Level\ILevel.cs" />
-    <Compile Include="Level\ILevelGenerator.cs" />
-    <Compile Include="Level\ILevelGeneratorParameters.cs" />
-    <Compile Include="Level\ITile.cs" />
-    <Compile Include="Level\LevelGeneratorParameters.cs" />
-    <Compile Include="Level\Tile.cs" />
+    <Compile Include="Modelling\Level\ILevelRenderer.cs" />
+    <Compile Include="Modelling\Level\ILevel.cs" />
+    <Compile Include="Modelling\Level\ILevelGenerator.cs" />
+    <Compile Include="Modelling\Level\ILevelGeneratorParameters.cs" />
+    <Compile Include="Modelling\Level\ITile.cs" />
+    <Compile Include="Modelling\Level\LevelGeneratorParameters.cs" />
+    <Compile Include="Modelling\Level\Tile.cs" />
     <Compile Include="Bindings\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\DmRandom.cs" />
